# fbi-directory-check

./: .gitignore  .travis.yml  README.md  pyproject.toml  requirements.txt  requirements_fix.txt  setup.py
.github/workflows/: tests.yml
fbi_directory_check/: __init__.py
fbi_directory_check/conf/: index_updater.ini  opensearch_updater.ini  stac_updater.ini
fbi_directory_check/core/: __init__.py  rabbit_connection.py
fbi_directory_check/scripts/: __init__.py  consistency_checker.py  opensearch_rescan_directory.py  q_monitor.py  rescan_directory.py  stac_rescan_directory.py  submit_directories.py
fbi_directory_check/tests/: old_test_consistency_checker.py  old_test_utils.py  test_consistency_checker.py  test_rescan.py
fbi_directory_check/tests/rain/: SFDL10_v1.0.json
fbi_directory_check/utils/: __init__.py  constants.py  gitutils.py  utils.py
